# deepvector-experiment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
data/results/: dtype_sanity_codestral.json  frozen_ceiling_smoke.json  frozen_ceiling_test.json  hybrid_rerank_test.json  llm_expansion_test.json  mamba_codestral_baseline.json  mamba_pooled_chunked_micro5.json  mamba_pooled_micro5.json  maxsim_discrimination_test.json  maxsim_smoke.json  multigranular_smoke.json  multigranular_test.json  nested_test.json  symbolic_routing_smoke_p29.json  symbolic_routing_smoke_p30.json  tree_index_test.json  voyage_baseline.json  voyage_micro5.json
docs/paper/: README.md  deepvector_writeup.md
notebooks/: 01_smoke_test.ipynb
scripts/: cloud_run.sh  cloud_teardown.sh  dtype_sanity.py  frozen_ceiling_test.py  hybrid_rerank_test.py  maxsim_test.py  multigranular_test.py  nested_test.py  smoke_codestral.py  smoke_test.py  symbolic_routing_test.py
src/: diagnostics.py  encoder.py  eval.py  frozen_methods.py  ingestion.py  llm_expansion.py  matching.py  maxsim.py  multigranular.py  nested_encoding.py  rerankers.py  tree_index.py  utils.py
src/baselines/: mamba_pooled.py  voyage.py
