[project]
name = "deepvector-experiment"
version = "0.0.1"
description = "Mamba-3 latent-state matching vs vector-search baselines for code retrieval"
requires-python = ">=3.11,<3.12"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
